--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="projects_card">
-                        <img class="photo" src="access/img/hardwaresoftware-sales.png.lnk" height="430px">
+                        <img class="photo" src="access/img/hardwaresoftware-sales.png" height="430px">
                         <div class="card_body">
                             <p>Worked with computer components</p>
                         </div>
